# serializer version: 1
# name: TestBlastRadius.test_user_blast_radius
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', ''))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND ((has(['0', '1', '2', '3', '4'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
          AND (has(['2', '3', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.1
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.5
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          INNER JOIN
            (SELECT person_id
             FROM person_static_cohort
             WHERE team_id = 2
               AND cohort_id = 2
             GROUP BY person_id,
                      cohort_id,
                      team_id) cohort_persons ON cohort_persons.person_id = person.id
          WHERE team_id = 2
            AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.3
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.4
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.5
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.6
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.7
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT person_id as id
          FROM person_static_cohort
          WHERE cohort_id = 2
            AND team_id = 2)
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))
                  OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))
           OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     INNER JOIN
       (SELECT DISTINCT person_id
        FROM cohortpeople
        WHERE team_id = 2
          AND cohort_id = 2
          AND version = 0
        ORDER BY person_id) cohort_persons ON cohort_persons.person_id = person.id
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature2'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.1
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.2
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.3
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.4
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.5
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.6
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 2
  OFFSET 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.7
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.8
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 2
  OFFSET 4
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.9
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature-new'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.1
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.10
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid,
                                         '00000000000040008000000000000002'::uuid,
                                         '00000000000040008000000000000003'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.11
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.2
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.3
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ((("markettor_person"."properties" -> 'group') = '"none"'::jsonb
               AND "markettor_person"."properties" ? 'group'
               AND NOT (("markettor_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("markettor_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "markettor_person"."properties" ? 'group2'
                  AND NOT (("markettor_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "markettor_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("markettor_person"."id"))
                 LIMIT 1)
              OR (("markettor_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "markettor_person"."properties" ? 'does-not-exist'
                  AND NOT (("markettor_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("markettor_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "markettor_person"."properties" ? 'key'
                  AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.4
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.5
  '''
  SELECT ("markettor_person"."id" IS NULL
          OR "markettor_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "markettor_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("markettor_person"."id"))
             LIMIT 1)
          OR "markettor_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'person1'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.6
  '''
  SELECT ("markettor_person"."id" IS NOT NULL
          OR "markettor_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "markettor_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("markettor_person"."id"))
             LIMIT 1)
          OR "markettor_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'person2'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.7
  '''
  SELECT ("markettor_person"."id" IS NULL
          OR "markettor_person"."id" IS NOT NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "markettor_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("markettor_person"."id"))
             LIMIT 1)
          OR "markettor_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'person3'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.8
  '''
  SELECT ("markettor_person"."id" IS NULL
          OR "markettor_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "markettor_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("markettor_person"."id"))
             LIMIT 1)
          OR "markettor_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'person4'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.9
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ((("markettor_person"."properties" -> 'group') = '"none"'::jsonb
               AND "markettor_person"."properties" ? 'group'
               AND NOT (("markettor_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("markettor_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "markettor_person"."properties" ? 'group2'
                  AND NOT (("markettor_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "markettor_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("markettor_person"."id"))
                 LIMIT 1)
              OR (("markettor_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "markettor_person"."properties" ? 'does-not-exist'
                  AND NOT (("markettor_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("markettor_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "markettor_person"."properties" ? 'key'
                  AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature2'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.1
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.10
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.11
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.12
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.13
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.2
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND UPPER(("markettor_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.3
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.4
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND UPPER(("markettor_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.5
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.6
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.7
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature-new'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.8
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.9
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature2'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.1
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.2
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.3
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.4
  '''
  SELECT "markettor_featureflaghashkeyoverride"."feature_flag_key",
         "markettor_featureflaghashkeyoverride"."hash_key",
         "markettor_featureflaghashkeyoverride"."person_id"
  FROM "markettor_featureflaghashkeyoverride"
  WHERE ("markettor_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "markettor_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.5
  '''
  SELECT "markettor_featureflaghashkeyoverride"."feature_flag_key",
         "markettor_featureflaghashkeyoverride"."hash_key",
         "markettor_featureflaghashkeyoverride"."person_id"
  FROM "markettor_featureflaghashkeyoverride"
  WHERE ("markettor_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "markettor_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.6
  '''
  SELECT "markettor_featureflaghashkeyoverride"."feature_flag_key",
         "markettor_featureflaghashkeyoverride"."hash_key",
         "markettor_featureflaghashkeyoverride"."person_id"
  FROM "markettor_featureflaghashkeyoverride"
  WHERE ("markettor_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "markettor_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.7
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.8
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.9
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_data_that_fails_to_query
  '''
  SELECT (("markettor_person"."properties" ->> 'email')::text ~ '2.3.9{0-9}{1}'
          AND "markettor_person"."properties" ? 'email'
          AND NOT (("markettor_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "markettor_person"
  WHERE "markettor_person"."team_id" = 2
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_group_data_that_fails_to_query
  '''
  SELECT (("markettor_group"."group_properties" ->> 'email')::text ~ '2.3.9{0-9}{1 ef}'
          AND "markettor_group"."group_properties" ? 'email'
          AND NOT (("markettor_group"."group_properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "markettor_group"
  WHERE ("markettor_group"."group_type_index" = 2
         AND "markettor_group"."team_id" = 2)
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.1
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.10
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND "markettor_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "markettor_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("markettor_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.11
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.12
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.13
  '''
  SELECT "markettor_experiment"."id",
         "markettor_experiment"."name",
         "markettor_experiment"."description",
         "markettor_experiment"."team_id",
         "markettor_experiment"."filters",
         "markettor_experiment"."parameters",
         "markettor_experiment"."secondary_metrics",
         "markettor_experiment"."created_by_id",
         "markettor_experiment"."feature_flag_id",
         "markettor_experiment"."exposure_cohort_id",
         "markettor_experiment"."start_date",
         "markettor_experiment"."end_date",
         "markettor_experiment"."created_at",
         "markettor_experiment"."updated_at",
         "markettor_experiment"."archived",
         "markettor_experiment"."type",
         "markettor_experiment"."variants",
         "markettor_experiment"."metrics"
  FROM "markettor_experiment"
  WHERE "markettor_experiment"."exposure_cohort_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.14
  '''
  /* user_id:0 celery:markettor.tasks.calculate_cohort.insert_cohort_from_feature_flag */
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.15
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  INNER JOIN
    (SELECT person_id
     FROM person_static_cohort
     WHERE team_id = 2
       AND cohort_id = 2
     GROUP BY person_id,
              cohort_id,
              team_id) cohort_persons ON cohort_persons.person_id = person.id
  WHERE team_id = 2
  GROUP BY id
  HAVING max(is_deleted) = 0
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.2
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.3
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.4
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics",
         "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_featureflag"
  INNER JOIN "markettor_team" ON ("markettor_featureflag"."team_id" = "markettor_team"."id")
  LEFT OUTER JOIN "markettor_user" ON ("markettor_featureflag"."created_by_id" = "markettor_user"."id")
  WHERE ("markettor_team"."project_id" = 2
         AND "markettor_featureflag"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.5
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."key" = 'some-feature'
         AND "markettor_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.6
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE ("markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.7
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 10000
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.8
  '''
  SELECT "markettor_persondistinctid"."id",
         "markettor_persondistinctid"."team_id",
         "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id",
         "markettor_persondistinctid"."version"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "markettor_persondistinctid" U0
            WHERE U0."person_id" = ("markettor_persondistinctid"."person_id")
            LIMIT 3)
         AND "markettor_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.9
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE ("markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'key') = '"value"'::jsonb
         AND "markettor_person"."properties" ? 'key'
         AND NOT (("markettor_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "markettor_person"."id" ASC
  LIMIT 10000
  OFFSET 10000
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM markettor_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM markettor_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM markettor_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.1
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM markettor_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM markettor_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM markettor_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO markettor_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'random'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM markettor_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.2
  '''
  SELECT "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "markettor_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.3
  '''
  SELECT "markettor_featureflaghashkeyoverride"."feature_flag_key",
         "markettor_featureflaghashkeyoverride"."hash_key",
         "markettor_featureflaghashkeyoverride"."person_id"
  FROM "markettor_featureflaghashkeyoverride"
  WHERE ("markettor_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "markettor_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.4
  '''
  SELECT (("markettor_person"."properties" -> 'email') = '"tim@markettor.com"'::jsonb
          AND "markettor_person"."properties" ? 'email'
          AND NOT (("markettor_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'example_id'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.5
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM markettor_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM markettor_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM markettor_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.6
  '''
  SELECT "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "markettor_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.7
  '''
  SELECT "markettor_persondistinctid"."person_id",
         "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."distinct_id" IN ('random')
         AND "markettor_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db
  '''
  SELECT "markettor_grouptypemapping"."id",
         "markettor_grouptypemapping"."team_id",
         "markettor_grouptypemapping"."group_type",
         "markettor_grouptypemapping"."group_type_index",
         "markettor_grouptypemapping"."name_singular",
         "markettor_grouptypemapping"."name_plural"
  FROM "markettor_grouptypemapping"
  WHERE "markettor_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.1
  '''
  SELECT "markettor_grouptypemapping"."id",
         "markettor_grouptypemapping"."team_id",
         "markettor_grouptypemapping"."group_type",
         "markettor_grouptypemapping"."group_type_index",
         "markettor_grouptypemapping"."name_singular",
         "markettor_grouptypemapping"."name_plural"
  FROM "markettor_grouptypemapping"
  WHERE "markettor_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.2
  '''
  SELECT "markettor_grouptypemapping"."id",
         "markettor_grouptypemapping"."team_id",
         "markettor_grouptypemapping"."group_type",
         "markettor_grouptypemapping"."group_type_index",
         "markettor_grouptypemapping"."name_singular",
         "markettor_grouptypemapping"."name_plural"
  FROM "markettor_grouptypemapping"
  WHERE "markettor_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_slow_db_doesnt_try_to_compute_conditions_again
  '''
  SELECT (("markettor_person"."properties" -> 'email') = '"tim@markettor.com"'::jsonb
          AND "markettor_person"."properties" ? 'email'
          AND NOT (("markettor_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (("markettor_person"."properties" -> 'email') = '"tim@markettor.com"'::jsonb
          AND "markettor_person"."properties" ? 'email'
          AND NOT (("markettor_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'example_id'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
